<resources>
    <string name="app_name">SPLYZA-TestApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="invite">Invite</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_text_back">Back</string>
    <string name="title_text_invite_member">Invite Members</string>
    <string name="title_text_home">Home</string>
    <string name="current_members">Current Members</string>
    <string name="current_supporters">Current Supporters</string>
    <string name="invite_permissions">Invite Permissions</string>
    <string name="limit">Limit</string>
    <string name="invite_urls_are_valid_for_7_days_permissions_can_be_changed_from_the_member_management_view">Invite URLs are valid for 7 days Permissions can be changed from the member management view</string>
    <string name="what_are_permissions">What are Permissions?</string>
    <string name="btn_text_share_qr_code">Share QR Code</string>
    <string name="btn_text_copy_link">Copy Link</string>
    <string name="title_text_my_qr_code">My QR Code</string>
</resources>